kustomize/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeapp-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeapp
  template:
    metadata:
      labels:
        app: timeapp
