kustomize/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeapp-service
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: timeapp
