kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timeapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: "site.timeapp.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: timeapp-service
            port:
              number: 80
